syntax = "proto3";
package puppet.fsm;

import "datapb/data.proto";

option go_package = "github.com/puppetlabs/go-fsm/fsmpb";

message ActorRequest {
  string name = 1;
}

message Actor {
  repeated Action actions = 1;
}

message Message {
  int64 id = 1;
  puppet.datapb.Data value = 2;
}

message Parameter {
  string name = 1;
  string type = 2;
}

message Action {
  string name = 2;
  repeated Parameter input = 3;
  repeated Parameter output = 4;
}

service Actors {
  rpc GetActor (ActorRequest) returns (Actor) {};

  rpc InvokeAction (stream Message) returns (stream Message) {};
}
